; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-output.c_ffmpeg_output_set_last_error.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-output.c_ffmpeg_output_set_last_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ffmpeg_data = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ffmpeg_data*, i8*)* @ffmpeg_output_set_last_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ffmpeg_output_set_last_error(%struct.ffmpeg_data* %0, i8* %1) #0 {
  %3 = alloca %struct.ffmpeg_data*, align 8
  %4 = alloca i8*, align 8
  store %struct.ffmpeg_data* %0, %struct.ffmpeg_data** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.ffmpeg_data*, %struct.ffmpeg_data** %3, align 8
  %6 = getelementptr inbounds %struct.ffmpeg_data, %struct.ffmpeg_data* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.ffmpeg_data*, %struct.ffmpeg_data** %3, align 8
  %11 = getelementptr inbounds %struct.ffmpeg_data, %struct.ffmpeg_data* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @bfree(i64 %12)
  br label %14

14:                                               ; preds = %9, %2
  %15 = load i8*, i8** %4, align 8
  %16 = call i64 @bstrdup(i8* %15)
  %17 = load %struct.ffmpeg_data*, %struct.ffmpeg_data** %3, align 8
  %18 = getelementptr inbounds %struct.ffmpeg_data, %struct.ffmpeg_data* %17, i32 0, i32 0
  store i64 %16, i64* %18, align 8
  ret void
}

declare dso_local i32 @bfree(i64) #1

declare dso_local i64 @bstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
